--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -6,12 +6,13 @@ body {
 .wrap {
     min-height: 100%;
     height: auto;
-    margin: 0 auto -60px;
+    /*margin: 0 auto -60px;*/
+    margin: 0 auto;
     padding: 0 0 60px;
 }
 
 .wrap > .container {
-    padding: 70px 15px 20px;
+    padding: 15px 20px;
 }
 
 .footer {
@@ -101,9 +102,9 @@ a.desc:after {
     border: none;
 }
 
-@media(max-width:767px) {
+@media (max-width: 767px) {
     .nav li > form > button.logout {
-        display:block;
+        display: block;
         text-align: left;
         width: 100%;
         padding: 10px 15px;
@@ -117,4 +118,25 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+
+.top {
+    background-color: #efefda;
+    padding: 5px 0;
+    text-align: center;
+}
+.top > h2{
+    color: #0099FF;
+    margin: 0;
+}
+
+.menu-left{
+    float: left;
+    margin: 10px 20px 10px;
+    width: 15%;
+    height: auto;
+}
+
+.nav-stacked > li{
+    text-align: center;
 }
