--- a/frontend/web/css/show.css
+++ b/frontend/web/css/show.css
@@ -1,18 +1,20 @@
+html{
+    height: 100%;
+}
 body {
     background-image: url("../image/bg.jpg");
     background-repeat: no-repeat;
     width: 100%;
+    height: 100%;
     background-size: cover;
+    overflow: hidden;
 }
 
-.weight{
+.weight {
     font-weight: bold;
 }
 
-.main-content {
-    background-color: rgba(255, 255, 255, 0.5);
-    height: content-box;
-}
+
 
 .size-44-black {
     font-family: 黑体;
@@ -32,6 +34,9 @@ body {
 }
 
 .main-content {
+    background-color: rgba(255, 255, 255, 0.5);
+    height: 650px;
+    overflow-y:auto;
     width: 80%;
     float: left;
     border: #C9C9C9 solid 1px;
@@ -56,7 +61,7 @@ body {
 .ppt-content {
     margin: 0 auto;
     width: 819px;
-    height: 617px;
+    height: 600px;
     padding: 10px;
 }
 
@@ -375,7 +380,8 @@ body {
     text-align: center;
     font-size: 38px;
 }
-.article-editor{
+
+.article-editor {
     font-family: 宋体;
     margin: 10px auto;
     width: 100%;
@@ -388,7 +394,7 @@ body {
     font-size: 20px;
 }
 
-.jxzy-nav{
+.jxzy-nav {
     margin-left: 10em;
     line-height: 100px;
 }
@@ -397,23 +403,24 @@ body {
     font-size: 30px;
 }
 
-.jxsj-block{
+.jxsj-block {
     width: 100%;
     height: 600px;
-    overflow:scroll;
+    overflow: scroll;
     padding: 20px 40px;
 }
 
 table.gridtable {
-    text-align:center;
-    vertical-align:middle;
-    font-family: verdana,arial,sans-serif;
-    font-size:20px;
-    color:#333333;
+    text-align: center;
+    vertical-align: middle;
+    font-family: verdana, arial, sans-serif;
+    font-size: 20px;
+    color: #333333;
     border-width: 1px;
     border-color: #666666;
     border-collapse: collapse;
 }
+
 table.gridtable th {
     border-width: 1px;
     padding: 8px;
@@ -421,6 +428,7 @@ table.gridtable th {
     border-color: #666666;
     background-color: #dedede;
 }
+
 table.gridtable td {
     border-width: 1px;
     padding: 8px;
@@ -429,7 +437,18 @@ table.gridtable td {
     background-color: #ffffff;
 }
 
-.evaluate-content{
+.evaluate-content {
     text-align: left;
     padding: 20px;
+}
+
+.student-content {
+    width: 100%;
+    padding: 10px 30px;
+    overflow: hidden;
+}
+
+.student-content > img {
+    height: inherit;
+    width: inherit;
 }
