--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -19,9 +19,9 @@ body {
 
 .footer {
     height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
+    /*background-color: #f5f5f5;*/
+    /*border-top: 1px solid #ddd;*/
+    /*padding-top: 20px;*/
 }
 
 .jumbotron {
@@ -132,3 +132,22 @@ a.desc:after {
     margin: 0;
 }
 
+.name{
+    font-size: 38px;
+    color: #F06A6D;
+}
+
+.topic{
+    background-image: url("/image/topic.png");
+    width: 100%;
+    height: 150px;
+    float: left;
+    margin-bottom: 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.menu{
+    width: 100%;
+    float: left;
+}
