--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -127,27 +127,67 @@ a.desc:after {
     padding: 5px 0;
     text-align: center;
 }
-.top > h2{
+
+.top > h2 {
     color: #0099FF;
     margin: 0;
 }
 
-.name{
+.name {
     font-size: 38px;
     color: #F06A6D;
 }
 
-.topic{
+.topic {
     background-image: url("/image/topic.png");
     width: 100%;
     height: 150px;
     float: left;
-    margin-bottom: 30px;
     background-repeat: no-repeat;
     background-size: cover;
+    position: absolute;
 }
 
-.menu{
+.menu {
+    background-image: url("/image/menu_bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
     width: 100%;
     float: left;
+}
+
+.menu-list {
+    margin-top: 30px;
+    list-style: none;
+}
+
+.menu-list > li {
+    margin-bottom: 15px;
+}
+
+.menu-list > li:nth-child(odd) {
+    padding-left: 50px;
+}
+
+.menu-list > li > a {
+    font-weight: bold;
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+}
+
+.stars {
+    width: 100%;
+    height: 150px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 50px;
+}
+
+.stars span {
+    width: 16px;
+    height: 21px;
+    background: url("/image/star.png");
+    position: absolute
 }
