--- a/backend/web/css/chance.css
+++ b/backend/web/css/chance.css
@@ -1,12 +1,70 @@
-.content{
+.content {
     width: 100%;
     height: 300px;
     padding: 0 20px 10px;
     overflow-y: auto;
     overflow-x: auto;
+    margin-top: 75px;
 }
 
-.row{
+.row {
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+
+table tr td {
+    text-align: center;
+    padding: 0 !important;
+}
+
+
+.number {
+    margin: 5px;
+    color: white;
+    width: 17px;
+    height: 17px;
+    line-height: 17px;
+    display: inline-block;
+    border-radius: 2px;
+}
+
+.num_1 {
+    background-color: #e7da0a;
+}
+
+.num_2 {
+    background-color: #3790f7;
+}
+
+.num_3 {
+    background-color: #4b4b4b;
+}
+
+.num_4 {
+    background-color: #ec7c30;
+}
+
+.num_5 {
+    background-color: #34e8ee;
+}
+
+.num_6 {
+    background-color: #4742f0;
+}
+
+.num_7 {
+    background-color: #b5afaf;
+}
+
+.num_8 {
+    background-color: #ea4025;
+}
+
+.num_9 {
+    background-color: #6d180b;
+}
+
+.num_10 {
+    background-color: #57ba37;
 }
